--- a/0introduction.tex
+++ b/0introduction.tex
@@ -1,6 +1,6 @@
 
 \chapter{Introduction}
-In recent years, the humanity has created many graph datasets much larger than those available ever before.
+In recent years, humanity has created many graph datasets much larger than those available ever before.
 Those graphs became a very popular object of research. Most notable examples are \emph{the Web graph} -- a graph of Internet websites and links between them, and all kinds of social networks. Other interesting graphs include transportation routes, similarity of scientific articles or citations among them.
 
 %\pomysl{Może dodać coś z tego, tylko własnymi słowiami: In 2008, Google estimated that the number of web pages reached over a trillion. Online social services such as Facebook, LinkedIn, and Twitter, have hundreds of millions of users and are expected to grow much more in the future. Processing these graphs plays a big role in relevant and personalized information for users, such as results from a search engine or news in an online social networking site.}
@@ -19,7 +19,7 @@ In the frameworks currently available one needs to implement a graph algorithm i
 
 The Socialite \cite{socialite, distsoc} language is one of the most interesting propositions. It is based on a classical query language --- Datalog \cite{fod}. In Datalog, the problem is expressed in a declarative way as a set of rules. Declarative semantics makes it easy to distribute the computations, since no execution flow is embedded in the program code. It also gives many possibilities for optimizations and approximate evaluation. At the same time, Datalog's support for recursion is crucial, since most graph algorithms are of iterative nature. However, most practical graph algorithms cannot be expressed efficiently in Datalog because of the language limitations. With a few extensions to original Datalog, the most important of which is recursive aggregation, SociaLite makes it easy to write intuitive programs which can be executed very efficiently.
 
-Unfortunately, there is no solid distributed implementation of SociaLite available. Only an undocumented interpreter for a sequential version of the language has been published along with the papers. According to \cite{distsoc}, the distributed version of the interpreter was build as an independent implementation based on Hadoop. It is hard to determine when the language could be adopted in the industry. At the same time, papers \cite{socialite} and \cite{distsoc} which introduced SociaLite contain certain simplifications and are not precise about some important details in definitions and proofs.
+Unfortunately, there is no solid distributed implementation of SociaLite available. Only an undocumented interpreter for a sequential version of the language has been published along with the papers. According to \cite{distsoc}, the distributed version of the interpreter was built as an independent implementation based on Hadoop. It is hard to determine when the language could be adopted in the industry. At the same time, papers \cite{socialite} and \cite{distsoc} which introduced SociaLite contain certain simplifications and are not precise about some important details in definitions and proofs.
 
 The goal of this thesis is to bridge the gap between the theoretical idea for Datalog with recursive aggregation and its practical implementation as well as to draw a path towards its usage in the industry. We show how to translate SociaLite-like declarative programs into programs on the Apache Spark platform and present an implementation of an extension to Spark that enables them to be executed on existing infrastructure and software stack. The extension allows Spark users to perform distributed graph computations using a declarative language without any additional effort to build a dedicated server infrastructure.
 
