--- a/7bibliography.tex
+++ b/7bibliography.tex
@@ -60,8 +60,8 @@
 \bibitem{sparkgrowingcommunity} http://databricks.com/blog/2013/10/27/the-growing-spark-community.html, Accessed: September 18th, 2014
 \bibitem{mesos} http://mesos.apache.org, Accessed: September 18th, 2014
 \bibitem{ec2} http://aws.amazon.com, Accessed: September 18th, 2014
-\bibitem{piglatin} http://pig.apache.org/
-\bibitem{hive} http://hive.apache.org/
+\bibitem{piglatin} http://pig.apache.org, Accessed: September 18th, 2014
+\bibitem{hive} http://hive.apache.org, Accessed: September 18th, 2014
 
 \bibitem{magicsetsexist} Mario Alviano, Nicola Leone, Marco Manna, Giorgio Terracina, Pierfrancesco Veltri: \textit{Magic-Sets for Datalog with Existential Quantifiers.} Datalog 2012: 31-43
 \bibitem{disjunctivedatalog} Mario Alviano, Wolfgang Faber, Nicola Leone, Marco Manna: \textit{Disjunctive datalog with existential quantifiers: Semantics, decidability, and complexity issues.} TPLP 12(4-5): 701-718 (2012)
@@ -72,6 +72,10 @@
 \bibitem{giraphbook} Claudio Martella, Roman Shaposhnik, Dionysios Logothetis: \textit{Giraph in Action}, Early access edition, http://www.manning.com/martella/
 
 \bibitem{twitterdata} http://snap.stanford.edu/data/egonets-Twitter.html, Accessed: September 18th, 2014 
+
+\bibitem{aggss} Abhijeet Mohapatra, Michael Genesereth: \textit{Aggregation in Datalog Under Set Semantics}, http://logic.stanford.edu/reports/LG-2012-01.pdf
+
+\bibitem{lcagg} Mariano P. Consens, Alberto O. Mendelzon: \textit{Low-complexity aggregation in GraphLog and Datalog}, Theoretical Computer Science, v.116 n.1, 1993
 
 \end{thebibliography}
 
