--- a/praca.tex
+++ b/praca.tex
@@ -20,6 +20,7 @@
 \usepackage{tikz}
 \usepackage{varwidth}
 \usetikzlibrary{arrows}
+\usepackage{xspace}
 
 %\overfullrule=2cm
 
@@ -53,7 +54,7 @@
   Institute of Informatics\\
   }
 
-\date{September 2014}
+\date{December 2014}
 
 \dziedzina{ 
 11.3 Computer Science\\ 
@@ -86,10 +87,10 @@
 \newcommand{\todo}[1]{\textcolor{red}{\fbox{TODO} #1}}
 \newcommand{\pomysl}[1]{\textcolor{cyan}{\fbox{DO ROZWAŻENIA} #1}}
 
-\newcommand{\datalogra}{Datalog$^{RA}$ }
-\newcommand{\datalogneg}{Datalog$^{\neg}$}
-\newcommand{\aggfun}{\textit{aggfun} }
-\newcommand{\aggcol}{\textit{aggcol} }
+\newcommand{\datalogra}{Datalog$^{RA}$\xspace}
+\newcommand{\datalogneg}{Datalog$^{\neg}$\xspace}
+\newcommand{\aggfun}{\textit{aggfun}\xspace}
+\newcommand{\aggcol}{\textit{aggcol}\xspace}
 \newcommand{\assign}{:-}
 \newcommand{\margp}[2]{{{\color{magenta} \emph{#1} \color{blue} #2}}}
 \newcommand{\ps}{\mathcal{P} }
@@ -101,11 +102,11 @@
 
 \newcommand*{\QEDA}{\hfill\ensuremath{\blacksquare}}
 
-\newcommand{\edb}{\textit{edb}}
-\newcommand{\idb}{\textit{idb}}
-\newcommand{\inst}{\textit{inst}}
-\newcommand{\sch}{\textit{sch}}
-\newcommand{\adom}{\textit{adom}}
+\newcommand{\edb}{\textit{edb}\xspace}
+\newcommand{\idb}{\textit{idb}\xspace}
+\newcommand{\inst}{\textit{inst}\xspace}
+\newcommand{\sch}{\textit{sch}\xspace}
+\newcommand{\adom}{\textit{adom}\xspace}
 
 \newcommand{\narrow}[1]{\begin{changemargin}{2cm}{2cm} #1 \end{changemargin}}
 \newcommand{\relat}[2]{$\textsc{#1}#2$}
